--- a/index.html
+++ b/index.html
@@ -1,6 +1,27 @@
 <h1>Erhan Bakkalbaşıoğlu</h1>
+<hr>
 <h2>About Me</h2>
-<p>Hello there, I'm Erhan. I'm a product manager. I like watching sci-fi series.</p>
-<h3>My favorite TV series:</h3>
-<h4>Stranger Things</h4>
+<p>Hello there, I'm <b>Erhan</b>. I live in Istanbul. I'm a product manager. In my spare time, I like reading and watching <em>something</em>.</p>
+<h3>My interests:</h3>
+<ol>
+    <li>TV Series</li>
+        <ul>
+            <li>
+                <a href="https://www.imdb.com/title/tt4574334/" target="_blank">Stranger Things</a>
+            </li>
+            <li>Lost in Space</li>
+        </ul>
+    <li>Books</li>
+        <ul>
+            <li>
+                <a href="https://www.goodreads.com/book/show/40121378-atomic-habits" target="_blank">Atomic Habits </a>
+            </li>
+            <li>Buy·ology</li>
+        </ul>
+</ol>
+
+
+
+<h4 id="stranger-things">Stranger Things</h4>
+<img style="width: 500px;" src="images/stranger-things.jpeg" title="Stranger Things" alt="Stranger Things">
 <p>Stranger Things is set in the fictional rural town of Hawkins, Indiana, during the 1980s. The nearby Hawkins National Laboratory ostensibly performs scientific research for the United States Department of Energy, but secretly does experiments into the paranormal and supernatural, including those that involve human test subjects. Inadvertently, they have created a portal to an alternate dimension, "the Upside Down". The influence of the Upside Down starts to affect the unknowing residents of Hawkins in calamitous ways.</p>
